[gd_scene load_steps=27 format=2]

[ext_resource path="res://src/ui/menus/main_menu.gd" type="Script" id=1]
[ext_resource path="res://src/ui/graphics/keys/a.png" type="Texture" id=2]
[ext_resource path="res://src/ui/graphics/keys/space.png" type="Texture" id=3]
[ext_resource path="res://src/themes/theme_standart.tres" type="Theme" id=4]
[ext_resource path="res://src/ui/graphics/keys/o.png" type="Texture" id=5]
[ext_resource path="res://src/ui/graphics/keys/esc.png" type="Texture" id=6]
[ext_resource path="res://src/themes/fonts/atma/Atma-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://src/ui/graphics/keys/arrow_right.png" type="Texture" id=8]
[ext_resource path="res://src/themes/theme_game_screens.tres" type="Theme" id=9]
[ext_resource path="res://src/themes/fonts/atma_big.tres" type="DynamicFont" id=10]
[ext_resource path="res://src/ui/graphics/keys/arrow_up.png" type="Texture" id=11]
[ext_resource path="res://src/ui/graphics/keys/arrow_left.png" type="Texture" id=12]
[ext_resource path="res://src/ui/graphics/keys/d.png" type="Texture" id=13]
[ext_resource path="res://src/ui/graphics/keys/f1.png" type="Texture" id=14]
[ext_resource path="res://src/ui/graphics/keys/w.png" type="Texture" id=15]
[ext_resource path="res://src/ui/graphics/keys/q.png" type="Texture" id=16]
[ext_resource path="res://src/characters/graphics/bear/bear_sit.png" type="Texture" id=17]
[ext_resource path="res://src/characters/graphics/bear/bear_walk_down_diagonal_3_.png" type="Texture" id=18]
[ext_resource path="res://src/characters/graphics/bear/bear_walk_down_diagonal_2_.png" type="Texture" id=19]
[ext_resource path="res://src/characters/graphics/bear/bear_walk_down_3_.png" type="Texture" id=20]
[ext_resource path="res://src/ui/graphics/background_garden.jpg" type="Texture" id=21]
[ext_resource path="res://src/themes/fonts/atma/Atma-Bold.ttf" type="DynamicFontData" id=22]

[sub_resource type="DynamicFont" id=3]
size = 29
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_bottom = -20
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 26
font_data = ExtResource( 22 )

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "walking",
"speed": 1.0
} ]

[node name="MainMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Main" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="Main"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 21 )
expand = true
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -519.0
margin_top = -97.0
margin_right = 520.0
margin_bottom = 315.0
grow_horizontal = 0
theme = ExtResource( 9 )

[node name="start" type="HBoxContainer" parent="Main/VBoxContainer"]
pause_mode = 2
margin_right = 1039.0
margin_bottom = 100.0

[node name="TextureRect3" type="TextureRect" parent="Main/VBoxContainer/start"]
pause_mode = 2
margin_right = 100.0
margin_bottom = 100.0
texture = ExtResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="Main/VBoxContainer/start"]
pause_mode = 2
margin_left = 104.0
margin_right = 204.0
margin_bottom = 100.0
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="Main/VBoxContainer/start"]
pause_mode = 2
margin_left = 208.0
margin_top = 29.0
margin_right = 640.0
margin_bottom = 70.0
text = "Spiel starten oder fortsetzen"

[node name="options" type="HBoxContainer" parent="Main/VBoxContainer"]
pause_mode = 2
margin_top = 104.0
margin_right = 1039.0
margin_bottom = 204.0

[node name="TextureRect3" type="TextureRect" parent="Main/VBoxContainer/options"]
pause_mode = 2
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )

[node name="TextureRect2" type="TextureRect" parent="Main/VBoxContainer/options"]
pause_mode = 2
margin_left = 104.0
margin_right = 204.0
margin_bottom = 100.0
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="Main/VBoxContainer/options"]
pause_mode = 2
margin_left = 208.0
margin_top = 29.0
margin_right = 405.0
margin_bottom = 70.0
text = "Einstellungen"

[node name="help" type="HBoxContainer" parent="Main/VBoxContainer"]
pause_mode = 2
margin_top = 208.0
margin_right = 1039.0
margin_bottom = 308.0

[node name="TextureRect4" type="TextureRect" parent="Main/VBoxContainer/help"]
pause_mode = 2
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )

[node name="TextureRect" type="TextureRect" parent="Main/VBoxContainer/help"]
pause_mode = 2
margin_left = 104.0
margin_right = 204.0
margin_bottom = 100.0
texture = ExtResource( 14 )

[node name="Label" type="Label" parent="Main/VBoxContainer/help"]
pause_mode = 2
margin_left = 208.0
margin_top = 29.0
margin_right = 516.0
margin_bottom = 70.0
text = "Hilfe, wie spiele ich ?!"

[node name="Sprite" type="Sprite" parent="Main/VBoxContainer/help"]
pause_mode = 2

[node name="quit" type="HBoxContainer" parent="Main/VBoxContainer"]
pause_mode = 2
margin_top = 312.0
margin_right = 1039.0
margin_bottom = 412.0

[node name="TextureRect4" type="TextureRect" parent="Main/VBoxContainer/quit"]
pause_mode = 2
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )

[node name="TextureRect" type="TextureRect" parent="Main/VBoxContainer/quit"]
pause_mode = 2
margin_left = 104.0
margin_right = 204.0
margin_bottom = 100.0
texture = ExtResource( 16 )

[node name="Label" type="Label" parent="Main/VBoxContainer/quit"]
pause_mode = 2
margin_left = 208.0
margin_top = 29.0
margin_right = 471.0
margin_bottom = 70.0
text = "Das Spiel beenden"

[node name="VBoxContainer2" type="VBoxContainer" parent="Main"]
pause_mode = 2
anchor_left = 0.5
anchor_right = 0.5
margin_left = -544.0
margin_top = 20.0
margin_right = 545.0
margin_bottom = 296.0

[node name="GameTitle" type="Label" parent="Main/VBoxContainer2"]
pause_mode = 2
margin_right = 1089.0
margin_bottom = 162.0
theme = ExtResource( 4 )
custom_constants/line_spacing = 0
custom_fonts/font = ExtResource( 10 )
text = "Bärenträume"
align = 1

[node name="Subtitle" type="Label" parent="Main/VBoxContainer2"]
pause_mode = 2
margin_top = 166.0
margin_right = 1089.0
margin_bottom = 194.0
custom_fonts/font = SubResource( 3 )
text = "ein Jump'n'Run-Spiel mit dem kleinen Bären und seinen Freunden !"
align = 1
valign = 1

[node name="TextureRect2" type="TextureRect" parent="Main"]
pause_mode = 2
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -271.0
margin_top = -320.0
rect_min_size = Vector2( 270, 320 )
texture = ExtResource( 17 )

[node name="Options" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 9 )

[node name="TextureRect" type="TextureRect" parent="Options"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 21 )
expand = true
stretch_mode = 1

[node name="Label2" type="Label" parent="Options"]
pause_mode = 2
anchor_left = 0.5
anchor_right = 0.5
margin_left = -640.0
margin_right = 640.0
margin_bottom = 158.0
text = "Einstellungen"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -427.0
margin_top = -92.0
margin_right = 427.0
margin_bottom = 92.0

[node name="master" type="HBoxContainer" parent="Options/VBoxContainer"]
pause_mode = 2
margin_right = 874.0
margin_bottom = 49.0

[node name="Label" type="Label" parent="Options/VBoxContainer/master"]
pause_mode = 2
margin_top = 4.0
margin_right = 470.0
margin_bottom = 45.0
rect_min_size = Vector2( 470, 0 )
text = "Gesamtlautstärke"
align = 2

[node name="MasterSlider" type="HSlider" parent="Options/VBoxContainer/master"]
pause_mode = 2
margin_left = 474.0
margin_right = 874.0
margin_bottom = 49.0
rect_min_size = Vector2( 400, 49 )
min_value = -80.0
max_value = 20.0
step = 2.0
ticks_on_borders = true

[node name="sound" type="HBoxContainer" parent="Options/VBoxContainer"]
pause_mode = 2
margin_top = 53.0
margin_right = 874.0
margin_bottom = 102.0

[node name="Label" type="Label" parent="Options/VBoxContainer/sound"]
pause_mode = 2
margin_top = 4.0
margin_right = 470.0
margin_bottom = 45.0
rect_min_size = Vector2( 470, 0 )
text = "Soundeffekte"
align = 2

[node name="SoundSlider" type="HSlider" parent="Options/VBoxContainer/sound"]
pause_mode = 2
margin_left = 474.0
margin_right = 874.0
margin_bottom = 49.0
rect_min_size = Vector2( 400, 49 )
min_value = -80.0
max_value = 20.0
step = 2.0
ticks_on_borders = true

[node name="music" type="HBoxContainer" parent="Options/VBoxContainer"]
pause_mode = 2
margin_top = 106.0
margin_right = 874.0
margin_bottom = 155.0

[node name="Label" type="Label" parent="Options/VBoxContainer/music"]
pause_mode = 2
margin_top = 4.0
margin_right = 470.0
margin_bottom = 45.0
rect_min_size = Vector2( 470, 0 )
text = "Hintergrundmusik"
align = 2

[node name="MusicSlider" type="HSlider" parent="Options/VBoxContainer/music"]
pause_mode = 2
margin_left = 474.0
margin_right = 874.0
margin_bottom = 49.0
rect_min_size = Vector2( 400, 49 )
min_value = -80.0
max_value = 20.0
ticks_on_borders = true

[node name="fullscreen" type="HBoxContainer" parent="Options/VBoxContainer"]
pause_mode = 2
margin_top = 159.0
margin_right = 874.0
margin_bottom = 208.0

[node name="Label" type="Label" parent="Options/VBoxContainer/fullscreen"]
pause_mode = 2
margin_top = 4.0
margin_right = 470.0
margin_bottom = 45.0
rect_min_size = Vector2( 470, 0 )
text = "Vollbildmodus"
align = 2

[node name="FullscreenCheckBtn" type="CheckButton" parent="Options/VBoxContainer/fullscreen"]
pause_mode = 2
margin_left = 474.0
margin_right = 550.0
margin_bottom = 49.0

[node name="OptionsButton" type="Button" parent="Options"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.514
anchor_right = 0.5
anchor_bottom = 0.514
margin_left = -128.0
margin_top = 181.92
margin_right = 128.0
margin_bottom = 269.92
text = "fertig"

[node name="Help" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 9 )

[node name="TextureRect" type="TextureRect" parent="Help"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 21 )
expand = true
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Help"]
pause_mode = 2
anchor_left = 0.436
anchor_top = 0.443
anchor_right = 0.436
anchor_bottom = 0.443
margin_left = -248.08
margin_top = -94.96
margin_right = 572.92
margin_bottom = 317.04
grow_horizontal = 0
rect_scale = Vector2( 0.8, 0.8 )

[node name="start" type="HBoxContainer" parent="Help/VBoxContainer"]
pause_mode = 2
margin_right = 821.0
margin_bottom = 100.0

[node name="TextureRect" type="TextureRect" parent="Help/VBoxContainer/start"]
pause_mode = 2
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )

[node name="TextureRect3" type="TextureRect" parent="Help/VBoxContainer/start"]
pause_mode = 2
margin_left = 104.0
margin_right = 204.0
margin_bottom = 100.0
texture = ExtResource( 12 )

[node name="TextureRect2" type="TextureRect" parent="Help/VBoxContainer/start"]
pause_mode = 2
margin_left = 208.0
margin_right = 308.0
margin_bottom = 100.0
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Help/VBoxContainer/start"]
pause_mode = 2
margin_left = 312.0
margin_top = 29.0
margin_right = 635.0
margin_bottom = 70.0
text = "nach links laufen"

[node name="options" type="HBoxContainer" parent="Help/VBoxContainer"]
pause_mode = 2
margin_top = 104.0
margin_right = 821.0
margin_bottom = 204.0

[node name="TextureRect" type="TextureRect" parent="Help/VBoxContainer/options"]
pause_mode = 2
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )

[node name="TextureRect3" type="TextureRect" parent="Help/VBoxContainer/options"]
pause_mode = 2
margin_left = 104.0
margin_right = 204.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 8 )

[node name="TextureRect2" type="TextureRect" parent="Help/VBoxContainer/options"]
pause_mode = 2
margin_left = 208.0
margin_right = 308.0
margin_bottom = 100.0
texture = ExtResource( 13 )

[node name="Label" type="Label" parent="Help/VBoxContainer/options"]
pause_mode = 2
margin_left = 312.0
margin_top = 29.0
margin_right = 669.0
margin_bottom = 70.0
text = "nach rechts laufen"

[node name="help" type="HBoxContainer" parent="Help/VBoxContainer"]
pause_mode = 2
margin_top = 208.0
margin_right = 821.0
margin_bottom = 308.0

[node name="TextureRect2" type="TextureRect" parent="Help/VBoxContainer/help"]
pause_mode = 2
margin_right = 100.0
margin_bottom = 100.0
texture = ExtResource( 3 )

[node name="TextureRect4" type="TextureRect" parent="Help/VBoxContainer/help"]
pause_mode = 2
margin_left = 104.0
margin_right = 204.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 11 )

[node name="TextureRect" type="TextureRect" parent="Help/VBoxContainer/help"]
pause_mode = 2
margin_left = 208.0
margin_right = 308.0
margin_bottom = 100.0
texture = ExtResource( 15 )

[node name="Label" type="Label" parent="Help/VBoxContainer/help"]
pause_mode = 2
margin_left = 312.0
margin_top = 29.0
margin_right = 481.0
margin_bottom = 70.0
text = "springen"

[node name="Sprite" type="Sprite" parent="Help/VBoxContainer/help"]
pause_mode = 2

[node name="quit" type="HBoxContainer" parent="Help/VBoxContainer"]
pause_mode = 2
margin_top = 312.0
margin_right = 821.0
margin_bottom = 412.0

[node name="TextureRect3" type="TextureRect" parent="Help/VBoxContainer/quit"]
pause_mode = 2
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )

[node name="TextureRect4" type="TextureRect" parent="Help/VBoxContainer/quit"]
pause_mode = 2
margin_left = 104.0
margin_right = 204.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )

[node name="TextureRect" type="TextureRect" parent="Help/VBoxContainer/quit"]
pause_mode = 2
margin_left = 208.0
margin_right = 308.0
margin_bottom = 100.0
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="Help/VBoxContainer/quit"]
pause_mode = 2
margin_left = 312.0
margin_top = 29.0
margin_right = 593.0
margin_bottom = 70.0
text = "Menü aufrufen"

[node name="VBoxContainer2" type="VBoxContainer" parent="Help"]
pause_mode = 2
anchor_left = 0.5
anchor_right = 0.5
margin_left = -544.5
margin_right = 544.5
margin_bottom = 211.0

[node name="GameTitle" type="Label" parent="Help/VBoxContainer2"]
pause_mode = 2
margin_right = 1089.0
margin_bottom = 162.0
custom_fonts/font = ExtResource( 10 )
text = "Hilfe!"
align = 1

[node name="Subtitle" type="Label" parent="Help/VBoxContainer2"]
pause_mode = 2
margin_top = 166.0
margin_right = 1089.0
margin_bottom = 209.0
custom_fonts/font = SubResource( 4 )
text = "Der kleine Bär muss laufen und springen und Dinge einsammeln (Äpfel, Münzen, ...)"
align = 1
valign = 1

[node name="HelpButton" type="Button" parent="Help"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -127.0
margin_top = -119.0
margin_right = 127.0
margin_bottom = -40.0
text = "okay!"

[node name="PanelContainer" type="PanelContainer" parent="Help"]
pause_mode = 2
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -269.0
margin_top = -432.0
custom_styles/panel = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Help/PanelContainer"]
pause_mode = 2
position = Vector2( -2, -44 )
scale = Vector2( 1.355, 1.428 )
frames = SubResource( 2 )
animation = "walking"
frame = 7
playing = true
centered = false

[connection signal="gui_input" from="Main/VBoxContainer/start" to="." method="_on_start_gui_input"]
[connection signal="gui_input" from="Main/VBoxContainer/options" to="." method="_on_options_gui_input"]
[connection signal="gui_input" from="Main/VBoxContainer/help" to="." method="_on_help_gui_input"]
[connection signal="gui_input" from="Main/VBoxContainer/quit" to="." method="_on_quit_gui_input"]
[connection signal="value_changed" from="Options/VBoxContainer/master/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="Options/VBoxContainer/sound/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="value_changed" from="Options/VBoxContainer/music/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="toggled" from="Options/VBoxContainer/fullscreen/FullscreenCheckBtn" to="." method="_on_FullscreenCheckBtn_toggled"]
[connection signal="pressed" from="Options/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Help/HelpButton" to="." method="_on_HelpButton_pressed"]
